fix text contrast before video is loaded

--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -27,10 +27,18 @@
   z-index: 1;
 }
 
+.video.lazy .video-content-overlay {
+  background-color: rgba(0 0 0 / 75%);
+}
+
 .video .video-content-overlay a.shop-link {
   display: block;
   width: 100%;
   height: 100%;
+}
+
+.video.lazy .video-content-overlay .video-control {
+  display: none;
 }
 
 .video .video-content-overlay .video-control {
